--- a/Lesson3/favoritebook/src/main/res/drawable/edittext_background.xml
+++ b/Lesson3/favoritebook/src/main/res/drawable/edittext_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/purple_500" />
+        android:color="@color/blue_500" />
     <corners
         android:radius="8dp" />
     <padding
