--- a/Lesson3/favoritebook/src/main/res/values/colors.xml
+++ b/Lesson3/favoritebook/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="blue_500">#5596AD</color>
+    <color name="blue_200">#00BFFF</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#255F00</color>
 </resources>
